# brwahl

./: .gitignore  CMakeLists.txt  README.md  dhondt.cc  dhondt.h  feiertage.cc  feiertage.h  fristen.cc  mitglieder.cc  mitglieder.h
